[tool.poetry]
name = "noise-diffusion"
version = "0.1.0"
description = ""
authors = ["Olar Alex <olaralex666@gmail.com>"]
readme = "README.md"
packages = [{include = "noise_diffusion"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "1.2.5"
numpy = "1.20.3"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
umap-learn = "0.5.3"
scipy = "1.6.3"
scikit-learn = "0.24.2"
seaborn = "0.11.1"
torch = { version = "1.13.1+cu117", source="torch"}
torchvision = { version = "0.14.1+cu117", source="torch" }
wandb = "^0.13.9"
hydra-core = "^1.3.1"
pytorch-lightning = "^1.9.0"
timm = "^0.6.12"
imageio = "^2.25.1"
pre-commit = "^3.1.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
secondary = true
default = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
